# arxiv-telegram-bot

./: .flake8  .gitignore  Procfile  README.rst  pyproject.toml  requirements.txt
.github/workflows/: black.yml  linting.yml  pylint.yml  python-app.yml  testing.yml
arxiv_telegram_bot/: Computer Science  Economics  Electrical Engineering and Systems Science  Mathematics  Quantitative Biology  Quantitative Finance  Statistics  Time  Users  __init__.py  __main__.py  arxivTelegramBot  base.py
arxiv_telegram_bot/functions/: categories.py  fetch.py  handlers.py  store.py  update.py
arxiv_telegram_bot/models/category/: category_helper.py  computer_science.py  economics.py  electrical_engineering_and_systems_science.py  mathematics.py  quantitative_biology.py  quantitative_finance.py  statistics.py
tests/: test_arxiv_telegram_bot.py
