[tool.poetry]
name = "arxiv-telegram-bot"
version = "0.1.0"
description = "A Telegram bot to retrieve information on the latest research papers on Arxiv"
authors = ["Sonaal Pradeep <unofficial.sonaal@gmail.com>", "Goutham Krishna <gauthamkrishna9991@live.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
python-telegram-bot = "^13.10"
arxiv = "^1.4.2"
python-dotenv = "^0.19.2"
lxml = "^4.7.1"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
