[tool.poetry]
name = "arxiv-telegram-bot"
version = "0.1.0"
description = "A Telegram bot to retrieve information on the latest research papers on Arxiv"
authors = ["Sonaal Pradeep <unofficial.sonaal@gmail.com>", "Goutham Krishna <gauthamkrishna9991@live.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
python-telegram-bot = "^13.10"
arxiv = "^1.4.2"
python-dotenv = "^0.19.2"
lxml = "^4.7.1"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
pylint = "^2.13.1"
flake8 = "^4.0.1"
mypy = "^0.942"

[tool.mypy]
show_none_errors = false
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = ["arxiv_telegram_bot.*", "bs4", "requests", "arxiv"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["arxiv_telegram_bot.models.category.*"]
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
